[package]
name = "mlqueue"
version = "0.1.0"
edition = "2024"
description = "Machine-wide queue coordinating local ML jobs through per-job maxParallelRuns admission"
license = "MIT"

[[bin]]
name = "mlqueue"
path = "src/bin/mlqueue.rs"

[[bin]]
name = "mlqueued"
path = "src/bin/mlqueued.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
humantime = "2"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
